--- a/ProjetEvent/View Controllers/Menu/Tutorial/Tuto1ViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/Tutorial/Tuto1ViewController.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="page1" translatesAutoresizingMaskIntoConstraints="NO" id="6WN-yt-Vfk">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tutoriiiiaalll1" translatesAutoresizingMaskIntoConstraints="NO" id="6WN-yt-Vfk">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ram-cp-ZKV">
@@ -42,6 +42,6 @@
         </view>
     </objects>
     <resources>
-        <image name="page1" width="324" height="579"/>
+        <image name="tutoriiiiaalll1" width="828" height="1472"/>
     </resources>
 </document>
