--- a/ProjetEvent/View Controllers/Menu/Tutorial/Tuto2ViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/Tutorial/Tuto2ViewController.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="page2" translatesAutoresizingMaskIntoConstraints="NO" id="Zaf-Ff-Lns">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tutooooorrriiiaal2" translatesAutoresizingMaskIntoConstraints="NO" id="Zaf-Ff-Lns">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RR7-Xc-Ruc">
@@ -42,6 +42,6 @@
         </view>
     </objects>
     <resources>
-        <image name="page2" width="326" height="574"/>
+        <image name="tutooooorrriiiaal2" width="828" height="1472"/>
     </resources>
 </document>
