--- a/ProjetEvent/View Controllers/Menu/Tutorial/Tuto3ViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/Tutorial/Tuto3ViewController.xib
@@ -26,19 +26,22 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0lR-zb-Lj2">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r5O-9t-cFi">
-                            <rect key="frame" x="321" y="18" width="33" height="30"/>
-                            <state key="normal" title="Pass"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r5O-9t-cFi">
+                            <rect key="frame" x="318" y="28" width="49" height="39"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                            <state key="normal" title="Pass">
+                                <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
                             <connections>
                                 <action selector="btnPass:" destination="-1" eventType="touchUpInside" id="K9T-by-5eX"/>
                             </connections>
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="r5O-9t-cFi" firstAttribute="top" secondItem="0lR-zb-Lj2" secondAttribute="top" constant="18" id="4Bu-0C-IaC"/>
-                        <constraint firstAttribute="bottom" secondItem="r5O-9t-cFi" secondAttribute="bottom" constant="619" id="6rB-Ip-lCJ"/>
-                        <constraint firstAttribute="trailing" secondItem="r5O-9t-cFi" secondAttribute="trailing" constant="21" id="9ps-AM-jsJ"/>
-                        <constraint firstItem="r5O-9t-cFi" firstAttribute="leading" secondItem="0lR-zb-Lj2" secondAttribute="leading" constant="321" id="HgF-Jl-oz1"/>
+                        <constraint firstItem="r5O-9t-cFi" firstAttribute="leading" secondItem="0lR-zb-Lj2" secondAttribute="leading" constant="318" id="1YO-e7-OvJ"/>
+                        <constraint firstAttribute="bottom" secondItem="r5O-9t-cFi" secondAttribute="bottom" constant="600" id="5FE-8K-5w9"/>
+                        <constraint firstAttribute="trailing" secondItem="r5O-9t-cFi" secondAttribute="trailing" constant="8" id="KZ1-sI-PRH"/>
+                        <constraint firstItem="r5O-9t-cFi" firstAttribute="top" secondItem="0lR-zb-Lj2" secondAttribute="top" constant="28" id="cZf-O3-9It"/>
                     </constraints>
                 </scrollView>
             </subviews>
